--- a/res/values-ne/strings.xml
+++ b/res/values-ne/strings.xml
@@ -21,7 +21,7 @@
     <string name="app_label" msgid="9035307001052716210">"मिडिया भण्डारण"</string>
     <string name="artist_label" msgid="8105600993099120273">"कलाकार"</string>
     <string name="unknown" msgid="2059049215682829375">"अज्ञात"</string>
-    <string name="root_images" msgid="5861633549189045666">"छविहरू"</string>
+    <string name="root_images" msgid="5861633549189045666">"फोटो"</string>
     <string name="root_videos" msgid="8792703517064649453">"भिडियोहरू"</string>
     <string name="root_audio" msgid="3505830755201326018">"अडियो"</string>
     <string name="root_documents" msgid="3829103301363849237">"कागजातहरू"</string>
