--- a/res/values-zu/strings.xml
+++ b/res/values-zu/strings.xml
@@ -48,13 +48,13 @@
     <string name="select" msgid="2704765470563027689">"Khetha"</string>
     <string name="recent" msgid="6694613584743207874">"Okwakamuva"</string>
     <string name="picker_view_selected" msgid="2266031384396143883">"Ukubuka kukhethiwe"</string>
-    <!-- no translation found for picker_photos (7415035516411087392) -->
-    <skip />
-    <!-- no translation found for picker_albums (4822511902115299142) -->
-    <skip />
-    <!-- no translation found for picker_album_item_count (1706547226783599356) -->
-    <!-- no translation found for picker_add_button_multi_select (4005164092275518399) -->
-    <skip />
+    <string name="picker_photos" msgid="7415035516411087392">"Izithombe"</string>
+    <string name="picker_albums" msgid="4822511902115299142">"Ama-albhamu"</string>
+    <plurals name="picker_album_item_count" formatted="false" msgid="1706547226783599356">
+      <item quantity="one">izinto <xliff:g id="COUNT_1">^1</xliff:g></item>
+      <item quantity="other">izinto <xliff:g id="COUNT_1">^1</xliff:g></item>
+    </plurals>
+    <string name="picker_add_button_multi_select" msgid="4005164092275518399">"Engeza (<xliff:g id="COUNT">^1</xliff:g>)"</string>
     <plurals name="permission_write_audio" formatted="false" msgid="8914759422381305478">
       <item quantity="one">Vumela i-<xliff:g id="APP_NAME_1">^1</xliff:g> ukuguqula amafayela omsindo angu-<xliff:g id="COUNT">^2</xliff:g>?</item>
       <item quantity="other">Vumela i-<xliff:g id="APP_NAME_1">^1</xliff:g> ukuguqula amafayela omsindo angu-<xliff:g id="COUNT">^2</xliff:g>?</item>
